--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,8 @@
 <h1> Posts index</h1>
+
+<% @posts.each do |post| %>
+      <h4><%= post.title %></h4>
+      <p><%= post.text %></p>
+<% end %>
+
+<%= paginate @posts %>
