--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,9 @@
 <h1>Posts show</h1>
 
-    <h4><%= @post.title %></h4>
-    <p><%= @post.text %></p>
-
+<% if @post.nil? %>
+    <h1>no post found</h1>
+<%else %>
+<h4><%= @post.title %></h4>
+<p><%= @post.text %></p>
+<% end %>
 
