Add stylesheet and views layout

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,5 @@
+
+<section class="section">
 <h1>Posts show</h1>
 
 <% if @post.nil? %>
@@ -7,3 +9,4 @@
 <p><%= @post.text %></p>
 <% end %>
 
+</section>
