--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<section class="section">
+
 <h1>Show user details</h1>
 
 <% if @user.nil? %>
@@ -8,3 +10,5 @@
     <p><%= post.text %></p>
   <% end %>
 <% end %>
+
+</section>
