--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<section class="section">
+
 <h1>User Details</h1>
 
 <% @users.each do |user| %>
@@ -8,3 +10,5 @@
       <p><%= post.text %></p>
     <% end %>
 <% end %>
+
+</section>
