--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -9,7 +9,7 @@
       <%= stylesheet_link_tag "style" %>
    </head>
 
-   <body id = "library">
+   <body id = "blog">
       <div id = "content">
          
          <div id = "header">
