--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,17 @@
 <section class="section">
 
-<h1>User Details</h1>
-
+<ul>
 <% @users.each do |user| %>
-    <h3><%= user.name %></h3>
-    <p>Number of posts by <%= user.name %>: <%= user.posts.count %></p>
-    <% user.posts.each do |post| %>
-      <h4><%= post.title %></h4>
-      <p><%= post.text %></p>
-    <% end %>
-<% end %>
+  <li>
+    <div>
+      <img src="<%= user.photo %>" alt="<%= user.name %>" >
+    </div>
+    <div>
+      <h4><%= user.name %></h4>
+      <p>Number of posts: <%= user.posts.count %></p>
+    </div>
+  </li>
+  <% end %>
+</ul>
 
 </section>
