--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,33 @@
 <section class="section">
 
-<h1>Show user details</h1>
-
 <% if @user.nil? %>
-<h2>User not found</h2>
+<h4>User not found</h4>
 <% else %>
-<% @user.posts.each do |post| %>
-    <h4><%= post.title %></h4>
-    <p><%= post.text %></p>
+<div>
+  <div>
+    <img src="<%= @user.photo %>" alt="<%= @user.name %>" >
+  </div>
+  <div>
+    <h4><%= @user.name %></h4>
+    <p>Number of posts: <%= @user.posts.count %></p>
+  </div>
+<div>
+<div>
+  <h4>Bio</h4>
+  <p><%= @user.bio %></p>
+</div>
+<ul>
+<% @user.posts.each_with_index do |post, index| %>
+  <li>
+    <h4>Post #<%= index + 1 %></h4>
+    <p><%= post.text[0..100]... %></p>
+    <p>Comments: <%= post.comments_counter%>, Likes: <%= post.likes_counter %></p>
+  </li>
   <% end %>
+</ul>
 <% end %>
+<div>
+  <button type="button">See all posts</button>
+</div>
 
 </section>
