--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,37 +1,18 @@
 <section class="section">
-
 <% if @user.nil? %>
-<h4>User not found</h4>
+  <h4>User not found</h4>
 <% else %>
 <div>
-  <div>
-    <img src="<%= @user.photo %>" alt="<%= @user.name %>" >
-  </div>
-  <div>
-    <h4><%= @user.name %></h4>
-    <p>Number of posts: <%= @user.posts.count %></p>
-  </div>
+  <%= render partial: 'users/user', locals: { user: @user } %>
 <div>
 <% end %>
 
 <ul>
 <% @posts.each_with_index do |post, index| %>
   <li >
-      <div>
-            <h4>Post #<%= index + 1 %></h4>
-            <p><%= post.text[0..100]... %></p>
-            <p>Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></p>
-      </div>
-      <% if post.comments_counter == 0 %>
-      <% else %>
-      <div>
-            <% post.comments.each do |comment| %>
-                  <p><%= @user.name %> : <%= comment.text %></p>
-            <% end %>
-      </div>
-      <% end %>
+  <%= render partial: 'users/post', locals: { post: post, index: index } %>
+  <%= render 'comments', post: post, user: @user %>
   </li>
   <% end %>
 </ul>
-
 </section>
