--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,33 +1,22 @@
 <section class="section">
 
 <% if @user.nil? %>
-<h4>User not found</h4>
+  <h4>User not found</h4>
 <% else %>
 <div>
-  <div>
-    <img src="<%= @user.photo %>" alt="<%= @user.name %>" >
-  </div>
-  <div>
-    <h4><%= @user.name %></h4>
-    <p>Number of posts: <%= @user.posts.count %></p>
-  </div>
+  <%= render 'user', user: @user %>
 <div>
-<div>
-  <h4>Bio</h4>
-  <p><%= @user.bio %></p>
-</div>
+
+<%= render 'bio' %>
+
 <ul>
-<% @user.posts.each_with_index do |post, index| %>
-  <li>
-    <h4>Post #<%= index + 1 %></h4>
-    <p><%= post.text[0..100]... %></p>
-    <p>Comments: <%= post.comments_counter%>, Likes: <%= post.likes_counter %></p>
-  </li>
-  <% end %>
+<% @user.posts.each do |post| %>
+  <%= render 'post', post: post %>
+<% end %>
 </ul>
+
 <% end %>
 <div>
   <button type="button">See all posts</button>
 </div>
-
 </section>
