--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -13,18 +13,46 @@ body {
   overflow-x: hidden;
   margin: 0;
   line-height: 1.2;
-
-  /* color: #ececec; */
 }
 
 main {
   margin: 0 auto;
-  width: 100%;
-  padding: 0 0 0 20px;
+  padding: 0 10%;
 }
 
 section {
   margin-top: 60px;
+}
+
+.user {
+  display: flex;
+  height: 100px;
+  border: 1px solid rebeccapurple;
+  margin-bottom: 20px;
+}
+
+.user-details {
+  display: grid;
+  grid-template-columns: minmax(10px, 5fr) minmax(160px, 1fr) max-content;
+  max-width: 80%;
+}
+
+.heading-container {
+  margin-left: 80px;
+  display: flex;
+  align-items: center;
+}
+
+.post-counter-details {
+  display: flex;
+  align-items: end;
+}
+
+img {
+  width: 100%;
+  min-width: 100%;
+  height: 100%;
+  vertical-align: middle;
 }
 
 h1,
@@ -43,22 +71,8 @@ p {
   text-align: justify;
 }
 
-img {
-  /* width: 50%; */
-  /* max-width: 50%; */
-  /* vertical-align: middle; */
-}
-
 .medium-heading {
-  font-size: 30px;
-
-  @media (max-width: 600px) {
-    font-size: 6vw;
-  }
-
-  @media (max-width: 400px) {
-    font-size: 20px;
-  }
+  font-size: 20px;
 }
 
 .small-heading {
@@ -68,15 +82,7 @@ img {
   margin: 10px 0 40px;
   width: 100%;
   white-space: nowrap;
-  font-size: 20px;
-
-  @media (max-width: 600px) {
-    font-size: 5vw;
-  }
-
-  @media (max-width: 400px) {
-    font-size: 30px;
-  }
+  font-size: 15px;
 }
 
 div#content {
@@ -99,5 +105,5 @@ footer {
 }
 
 ul > li {
-   list-style: none;
+  list-style: none;
 }
