--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,13 @@
-<div>
-  <img src="<%= user.photo %>" alt="<%= user.name %>" >
-</div>
-<div>
-  <h4><%= user.name %></h4>
-  <p>Number of posts: <%= user.posts.count %></p>
-</div>
+<li class="user">
+    <div>
+      <img src="<%= user.photo %>" alt="<%= user.name %>" >
+    </div>
+    <div class="user-details">
+        <div class="heading-container">
+            <h4 class="medium-heading"><%= user.name %></h4>
+        </div>
+        <div class="post-counter-details">
+        <p>Number of posts: <%= user.posts.count %></p>
+        </div>
+    </div>
+</li>
