--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
-<div>
-    <h4>Post #<%= @post.id %> by <%= @user.name %></h4>
-    <p>Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></p>
+<div class="post">
+    <h4 class="small-heading">Post #<%= @post.id %> by <%= @user.name %></h4>
+    <p class="comment-heading">Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></p>
     <p><%= @post.text %></p>
 </div>
