--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -13,7 +13,9 @@
       <div id = "content">
          
          <div id = "header">
-            <h1>Blog App</h1>
+            <h1>
+            <%= link_to "Blog App", root_path %>
+            </h1>
          </div>
 
          <main id = "main-section">
