--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,11 @@
 <% @posts.each_with_index do |post, index| %>
   <li >
   <%= render partial: 'users/post', locals: { post: post, index: index } %>
-  <%= render 'comments', post: post, user: @user %>
+  <% if post.comments_counter > 0 %>
+          <% post.five_most_recent_comments.each do |comment| %>
+            <%= render 'comments', comment: comment, user: @user %>
+            <% end %>
+          <% end %>
   </li>
   <% end %>
 </ul>
