--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,7 +4,9 @@
     </div>
     <div class="user-details">
         <div class="heading-container">
-            <h4 class="medium-heading"><%= user.name %></h4>
+            <h4 class="medium-heading">
+            <%= link_to user.name, user_path(user.id) %>
+            </h4>
         </div>
         <div class="post-counter-details">
         <p>Number of posts: <%= user.posts.count %></p>
