--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,15 @@
 <section class="section">
+
+
 <% if @user.nil? %>
-  <h4>User not found</h4>
+<h4>User not found</h4>
 <% else %>
 <div>
-  <%= render partial: 'users/user', locals: { user: @user } %>
+<%= render partial: 'users/user', locals: { user: @user } %>
 <div>
 <% end %>
+
+<%= link_to 'New Post', new_user_post_path %>
 
 <ul>
 <% @posts.each_with_index do |post, index| %>
@@ -19,4 +23,7 @@
   </li>
   <% end %>
 </ul>
+
+
+
 </section>
