Add create a comment form

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,9 @@
 <div>
 <% end %>
 
-<%= link_to 'New Post', new_user_post_path %>
+<div class="button">
+  <button type="button"><%= link_to 'Add New Post', new_user_post_path %></button>
+</div>
 
 <ul>
 <% @posts.each_with_index do |post, index| %>
