--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <section class="add-post-section">
 
-<h4>New Post</h4>
+<h4>Adding New Post</h4>
 
 <%= form_with(model: @post, url: user_posts_path) do |form| %>
     <div class="field">
