--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,11 +6,15 @@
 </button>
 </div>
 
+<%= link_to 'Like', user_post_likes_path(@post.author_id, @post), method: :post, remote: true %>
 
-    <%= render 'post', post: @post %>
-    <% if @post.comments_counter > 0 %>
+<%= render 'post', post: @post %>
+
+<% if @post.comments_counter > 0 %>
           <% @post.comments.each do |comment| %>
             <%= render 'comments', comment: comment, user: @user %>
             <% end %>
     <% end %>
+
+   
 </section>
