Add bootstrap and partial forms

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -127,6 +127,13 @@ button {
   transition: var(--transition);
 }
 
+.flex-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 button:hover {
   background-color: var(--secondary-tint);
   outline: none;
