--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,14 +1,13 @@
-<section>
+<section class="flex-center">
 
-<%= form_with model: [@post, @comment], url: user_post_comments_path do |f| %>
-    <div class="field"
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-    </div>
-    
-    <div class="action">
-    <%= f.submit "Add Comment" %>
+<h1 class="medium-heading">
+Adding a comment
+</h1>
+
+<%= bootstrap_form_with(model: [@post, @comment], url: user_post_comments_path, local: true, layout: :horizontal) do |form| %>
+    <br>
+    <%= form.text_area :text %>
+    <br>
+     <%= form.button "Add Comment" %>
     <% end %>
-    </div>
-
 </section>
