--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,3 @@
-<%= form_with model: @like, url: user_post_likes_path(@post.author_id, @post) do |form| %>
-    <div class="like-btn">
-      <%= form.submit "Like"%>
-    </div>
+<%= bootstrap_form_with(model: @like, url: user_post_likes_path(@post.author_id, @post), local: true, layout: :horizontal) do |form| %>
+      <%= form.button "Like"%>
   <% end %>
