--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -18,6 +18,9 @@
             </h1>
          </div>
 
+         <p class="notice"><%= notice %></p>
+         <p class="alert"><%= alert %></p>
+
          <main id = "main-section">
             <%= yield -%>
          </main>
