Update device views

--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -14,7 +14,7 @@
          
          <div id = "header">
             <h1>
-            <%= link_to "Blog App", root_path %>
+            <%= link_to "Blog App", users_path %>
             </h1>
          </div>
 
