Add styles to device views

--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -16,10 +16,21 @@
             <h1>
             <%= link_to "Blog App", users_path %>
             </h1>
+
+            <div class="user-profile">
+               <% if user_signed_in? %>
+                <h3>
+                  <%= current_user.name %>
+               </h3>
+            <button>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+             </button>
+            <% end %>   
+            </div>
          </div>
 
-         <p class="notice"><%= notice %></p>
-         <p class="alert"><%= alert %></p>
+         <p class="notice flex-center"><%= notice %></p>
+         <p class="alert flex-center"><%= alert %></p>
 
          <main id = "main-section">
             <%= yield -%>
