--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,8 @@
-<h2>Change your password</h2>
+<section class="flex-center">
+
+<div class="form">
+
+<h4>Change your password</h4>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -23,3 +27,8 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+
+</div>
+
+</section>
