--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,8 @@
-<h2>Forgot your password?</h2>
+<section class="flex-center">
+
+<div class="form">
+
+<h4>Forgot your password?</h4>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -8,9 +12,14 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
+  <br />
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.button "Send me reset password instructions" %>
   </div>
 <% end %>
-
+<br />
 <%= render "devise/shared/links" %>
+
+</div>
+
+</section>
