--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -20,7 +20,7 @@
             <div class="user-profile">
                <% if user_signed_in? %>
                 <h3>
-                  <%= current_user.name %>
+                  <%= "Hello #{current_user.name}!" %>
                </h3>
             <button>
             <%= link_to "Log out", destroy_user_session_path, method: :delete %>
