--- a/app/views/users/_post.html.erb
+++ b/app/views/users/_post.html.erb
@@ -2,6 +2,11 @@
   <h4 class="small-heading">
     <%= link_to "Post ##{post.id}", user_post_path(post.author_id, post.id) %>
   </h4>
+
+
+  <%= render partial: 'posts/form_delete' %>
+
+
   <% if post.text.present? && post.text.length > 200 %>
     <p><%= post.text.first(150)... %></p>
   <% else %>
