--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,6 +3,6 @@
         Post #<%= @post.id %> by <%= @user.name %>
     </h4>
     <p class="comment-heading">Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></p>
-    <%= render 'form_like' %>
+    <%= render 'form' %>
     <p><%= @post.text %></p>
 </div>
